--- a/day-one/how-it-works.html
+++ b/day-one/how-it-works.html
@@ -2,13 +2,18 @@
 <html>
 <head>
 	<title>Test</title>
+	<style type="text/css">
+		body {
+			font-family: 'segoe ui'
+		}
+	</style>
 </head>
 <body>
-	<h1>Welcome</h1>
+	<h1>React Study Jam</h1>
 	<div id="container"></div>
 	<script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 	<script type="text/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js"></script>
-	<script type="text/babel" src="props.js"></script>
+	<script type="text/babel" src="counter.js"></script>
 </body>
 </html>
